// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default options deep merge three objects 1`] = `
Object {
  "a": 3,
  "b": Array [
    3,
    3,
  ],
  "c": Object {
    "x": 3,
    "y": Array [
      3,
      "😀",
    ],
    "z": 3,
  },
  "d": true,
  "e": null,
}
`;

exports[`Default options deep merge two objects 1`] = `
Object {
  "a": 2,
  "b": Array [
    2,
    2,
  ],
  "c": Object {
    "x": 2,
    "y": Array [
      2,
      "😀",
    ],
  },
  "d": true,
  "e": null,
}
`;

exports[`Options: Arrays appendArrays 1`] = `
Object {
  "a": Array [
    1,
    1,
    2,
    2,
    Array [
      2,
      2,
    ],
    3,
    3,
    Array [
      3,
      3,
    ],
  ],
  "b": Object {
    "x": Array [
      2,
      "😀",
      3,
      "😀",
    ],
  },
}
`;

exports[`Options: Arrays dedupArrays + afterEach with deduped mergeVal) 1`] = `
Object {
  "test": Array [
    1,
  ],
}
`;

exports[`Options: Arrays dedupArrays + appendArrays 1`] = `
Object {
  "a": Array [
    1,
    2,
    Array [
      2,
      2,
    ],
    3,
    Array [
      3,
      3,
    ],
  ],
  "b": Object {
    "x": Array [
      2,
      "😀",
      3,
    ],
  },
}
`;

exports[`Options: Arrays dedupArrays + prependArrays 1`] = `
Object {
  "a": Array [
    3,
    Array [
      3,
      3,
    ],
    2,
    Array [
      2,
      2,
    ],
    1,
  ],
  "b": Object {
    "x": Array [
      3,
      "😀",
      2,
    ],
  },
}
`;

exports[`Options: Arrays prependArrays 1`] = `
Object {
  "a": Array [
    3,
    3,
    Array [
      3,
      3,
    ],
    2,
    2,
    Array [
      2,
      2,
    ],
    1,
    1,
  ],
  "b": Object {
    "x": Array [
      3,
      "😀",
      2,
      "😀",
    ],
  },
}
`;

exports[`Options: Callbacks afterEach() arguments 1`] = `
Object {
  "a": 2,
  "b": Object {
    "c": "bar",
  },
}
`;

exports[`Options: Callbacks afterEach() return value 1`] = `
Object {
  "a": "baz",
  "b": "baz",
}
`;

exports[`Options: Callbacks afterEach() without return value 1`] = `
Object {
  "a": 2,
  "b": Object {
    "c": "bar",
  },
}
`;

exports[`Options: Callbacks beforeEach() arguments 1`] = `
Object {
  "a": 2,
  "b": Object {
    "c": "bar",
  },
}
`;

exports[`Options: Callbacks beforeEach() with return value 1`] = `
Object {
  "a": "baz",
  "b": "baz",
}
`;

exports[`Options: Callbacks beforeEach() without return value 1`] = `
Object {
  "a": 2,
  "b": Object {
    "c": "bar",
  },
}
`;

exports[`Options: Callbacks filter() arguments 1`] = `
Object {
  "a": 2,
  "b": Object {
    "c": "bar",
  },
}
`;

exports[`Options: Callbacks filter() false 1`] = `
Object {
  "b": Object {
    "c": "bar",
  },
}
`;

exports[`Options: Callbacks filter() true 1`] = `
Object {
  "a": 2,
}
`;

exports[`Options: Callbacks filter() without return value 1`] = `
Object {
  "a": 2,
  "b": Object {
    "c": "bar",
  },
}
`;

exports[`Options: Keys onlyCommonKeys + onlyKeys 1`] = `
Object {
  "b": Array [
    3,
    3,
  ],
  "c": Object {
    "x": 3,
  },
}
`;

exports[`Options: Keys onlyCommonKeys + skipKeys 1`] = `
Object {
  "b": Array [
    3,
    3,
  ],
  "c": Object {
    "x": 3,
    "y": Array [
      3,
      "😀",
    ],
  },
}
`;

exports[`Options: Keys onlyCommonKeys 1`] = `
Object {
  "a": 3,
  "b": Array [
    3,
    3,
  ],
  "c": Object {
    "x": 3,
    "y": Array [
      3,
      "😀",
    ],
  },
}
`;

exports[`Options: Keys onlyKeys + skipKeys 1`] = `
Object {
  "a": 3,
}
`;

exports[`Options: Keys onlyKeys 1`] = `
Object {
  "a": 3,
  "c": Object {
    "x": 3,
  },
}
`;

exports[`Options: Keys onlyUniversalKeys + onlyKeys 1`] = `
Object {
  "a": 3,
}
`;

exports[`Options: Keys onlyUniversalKeys + skipKeys 1`] = `
Object {
  "b": Array [
    3,
    3,
  ],
}
`;

exports[`Options: Keys onlyUniversalKeys 1`] = `
Object {
  "a": 3,
  "b": Array [
    3,
    3,
  ],
}
`;

exports[`Options: Keys skipCommonKeys + onlyKeys 1`] = `
Object {
  "d": true,
}
`;

exports[`Options: Keys skipCommonKeys + skipKeys 1`] = `
Object {
  "e": null,
}
`;

exports[`Options: Keys skipCommonKeys 1`] = `
Object {
  "d": true,
  "e": null,
}
`;

exports[`Options: Keys skipKeys 1`] = `
Object {
  "b": Array [
    3,
    3,
  ],
  "c": Object {
    "y": Array [
      3,
      "😀",
    ],
    "z": 3,
  },
  "d": true,
  "e": null,
}
`;

exports[`Options: Keys skipUniversalKeys + onlyKeys 1`] = `
Object {
  "c": Object {},
}
`;

exports[`Options: Keys skipUniversalKeys + skipKeys 1`] = `
Object {
  "d": true,
  "e": null,
}
`;

exports[`Options: Keys skipUniversalKeys 1`] = `
Object {
  "c": Object {
    "z": 3,
  },
  "d": true,
  "e": null,
}
`;
